--- a/index.html
+++ b/index.html
@@ -26,14 +26,19 @@
             <div class="col-md-8">
                 <div id="cityNameTitle">
                     <h1>World's Weather</h1>
-                    <p>You know how it works... write a city name on the above search bar and you will get it's weather.</p>
+                    <p>You know how it works... write a city name on the above search bar and you will get it's weather.
+                    </p>
                     <p>Simple and fast.</p>
                 </div>
                 <div class="input-group" id="searcher">
                     <span class="input-group-addon" id="globe"><i class="glyphicon glyphicon-globe"></i></span>
+
+                    <!--                    Searcher-->
                     <input type="text" class="form-control" placeholder="Enter a city" id="searching">
+
                     <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit" id="submitBtn"><i class="glyphicon glyphicon-search"></i></button>
+                        <button class="btn btn-default" type="submit" id="submitBtn"><i
+                                class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
             </div>
@@ -116,23 +121,19 @@
             </div>
             <!--             Left and right controls -->
             <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
             <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
 
     </div>
 
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="weather.js"></script>
-
 </body>
-
 </html>
